# cognitive-memory-engine

./: .env.example  .gitignore  BUILD_YOUR_OWN_AI_SYSTEM.md  CME_Analysis_Report.md  CME_PROLOG_SOLUTION_PLAN.md  DUAL_TRACK_ARCHITECTURE_TODO.md  GEMINI.md  IMPLEMENTATION_STATUS.md  MIGRATION_COMPLETE.md  PHASE_1_SUCCESS_REPORT.md  PROJECT_COMPLETE.md  QUERY_MODE_FIXES.md  QUICK_START.md  README.md  SIMPLIFIED_SYSTEM_PROMPT.md  SYSTEM_USE_PROMPT.md  TODO_IMPLEMENTATION.md  ai_systems_mindmap_content.md  debug_initialization.py  demo_context_fetch_integration.py  list_models.py  pyproject.toml  requirements.txt  setup.py  test_cme_functionality.py  test_cme_improvements.py  test_dual_track.py  test_enhanced_integration.py  test_imports.py  test_phase2_blended.py  test_phase2_simple.py  test_simple_integration.py  ultimate_setup.py
archived/: AETHELRED_SYSTEM_PROMPT.md  CONTEXT_FETCH_INTEGRATION.md  DUAL_TRACK_ARCHITECTURE_TODO.md  MIGRATION_SUMMARY.md  PHASE_2_SUCCESS_REPORT.md  PHASE_3B2_IMPLEMENTATION_PLAN.md  PROVIDER_FLEXIBILITY_UPDATE.md  TODO_IMPLEMENTATION_UPDATED.md  TODO_SEMANTIC_ENHANCEMENT.md  cognitive_memory_info_demo.py  debug_initialization.py  demo_context_fetch_integration.py  logical_query_processor_improved.py  prolog_processor_improved.py  query_blended_knowledge.py  test_concept_retrieval.py  test_config.py  test_dual_track.py  test_enhanced_integration.py  test_enhanced_store_document.py  test_env.py  test_google_provider.py  test_imports.py  test_narrative_storage.py  test_phase2_blended.py  test_phase2_simple.py  test_phase3b1_verification.py  test_phase3b2_verification.py  test_server.py  test_simple_integration.py
enhanced_knowledge_tools/: README.md  __init__.py  aethelred_knowledge_expansion_demo.py  enhanced_server_tools.py
examples/: basic_usage.py  working_demo.py
src/cognitive_memory_engine/: __about__.py  __init__.py  config.py  list_models.py  llm_providers.py  task_manager.py  types.py
src/cognitive_memory_engine/cli/: __init__.py  lqepr_commands.py
src/cognitive_memory_engine/comprehension/: __init__.py  document_knowledge_builder.py  narrative_tree_builder.py  temporal_organizer.py
src/cognitive_memory_engine/core/: __init__.py  engine.py  exceptions.py
src/cognitive_memory_engine/mcp_server/: __init__.py  main.py
src/cognitive_memory_engine/production/: __init__.py  response_generator.py
src/cognitive_memory_engine/semantic/: __init__.py  abstract_processors.py  logical_query_processor.py  prolog_processor.py  similarity_calculator.py
src/cognitive_memory_engine/storage/: __init__.py  cross_reference_store.py  document_store.py  rtm_graphs.py  semantic_graph_store.py  temporal_library.py  vector_store.py
src/cognitive_memory_engine/tests/: CME_Improvements_Checklist.md  CME_Improvements_Summary.md  JANUS_ASSERTZ_RETRACT_FIX.md  fix_cme_issues.py  fix_serialization.py  test_cme_pagination.py
src/cognitive_memory_engine/workspace/: __init__.py  context_assembler.py  svg_memory_index.py  svg_vector_manager.py  vector_manager.py
