[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognitive-memory-engine"
dynamic = ["version"]
description = "A unified AI memory architecture combining neuroscientific principles, temporal organization, and narrative hierarchies"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ai", "memory", "mcp", "cognitive", "neural", "temporal"]
authors = [
  {name = "AI Workspace", email = "angrysky56@users.noreply.github.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  # MCP Server
  "mcp[cli]>=1.2.0",
  # Core dependencies
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "pydantic>=2.5.0",
  # AI and ML
  "openai>=1.3.0",
  "google-generativeai>=0.8.0", # Added for Gemini support
  "anthropic>=0.39.0", # Added for Claude support
  "sentence-transformers>=2.2.2",
  "torch>=2.1.0",
  "transformers>=4.35.0",
  # Vector and Graph databases
  "chromadb>=0.4.18",
  "networkx>=3.2.1",
  # Scientific computing (for SVG)
  "scipy>=1.11.0",
  "scikit-learn>=1.3.0",
  # Data processing
  "numpy>=1.24.0",
  "pandas>=2.1.0",
  "python-dateutil>=2.8.2",
  # HTTP and async
  "aiohttp>=3.9.0",
  "httpx>=0.25.0",
  # Logging and monitoring
  "loguru>=0.7.0",
  # Ollama integration
  "ollama>=0.1.0",
  "google-genai>=1.25.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.7.0",
  "isort>=5.12.0",
]

[project.urls]
Documentation = "https://github.com/angrysky56/ai_workspace/tree/main/cognitive-memory-engine#readme"
Issues = "https://github.com/angrysky56/ai_workspace/issues"
Source = "https://github.com/angrysky56/ai_workspace/tree/main/cognitive-memory-engine"

[project.scripts]
cognitive-memory-engine = "cognitive_memory_engine.mcp_server.main:main"
cme-server = "cognitive_memory_engine.mcp_server.main:main"

[tool.hatch.version]
path = "src/cognitive_memory_engine/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cognitive_memory_engine"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
  "src/cognitive_memory_engine/tests",
]
